@@ -18,6 +18,9 @@ public class Font {
 	/* The font */
 	public TrueTypeFont font;
 	
+	/* The bitmap font */
+	public BitmapText bitmapFont;
+	
 	/* The colour */
 	public Colour colour;
 	
@@ -35,13 +38,31 @@ public class Font {
 		this.colour = colour;
 	}
 	
+	/* The constructor with the font */
+	public Font(BitmapText bitmapFont) {
+		//Assign the variables
+		this.bitmapFont = bitmapFont;
+		this.colour = Colour.WHITE;
+	}
+	
 	/* The method used to render some text */
 	public void render(String text, float x, float y) {
 		GL11.glPushAttrib(GL11.GL_ENABLE_BIT);
 		//Enable 2D textures
 		GL11.glEnable(GL11.GL_TEXTURE_2D);
-		//Render the font
-		this.font.drawString(x, y, text, new Color(this.colour.r, this.colour.g, this.colour.b, this.colour.a));
+		//Check which font has been set
+		if (this.bitmapFont == null)
+			//Render the text
+			this.font.drawString(x, y, text, new Color(this.colour.r, this.colour.g, this.colour.b, this.colour.a));
+		else {
+			//Check the text
+			if (this.bitmapFont.getCurrentText() == null || ! this.bitmapFont.getCurrentText().equals(text))
+				this.bitmapFont.update(text);
+			//Set the position
+			this.bitmapFont.position = new Vector2D(x, y);
+			//Render the text
+			this.bitmapFont.render();
+		}
 		TextureImpl.unbind();
 		GL11.glDisable(GL11.GL_TEXTURE_2D);
 		GL11.glPopAttrib();
@@ -69,11 +90,19 @@ public class Font {
 	
 	/* The method used to get the width/height of some text */
 	public float getWidth(String text) {
-		return this.font.getWidth(text);
+		//Check which font has been set
+		if (this.bitmapFont == null)
+			return this.font.getWidth(text);
+		else
+			return this.bitmapFont.getWidth(text);
 	}
 	
 	public float getHeight(String text) {
-		return this.font.getHeight();
+		//Check which font has been set
+		if (this.bitmapFont == null)
+			return this.font.getHeight(text);
+		else
+			return this.bitmapFont.getHeight(text);
 	}
 	
 }
